--- a/catring.css
+++ b/catring.css
@@ -168,10 +168,7 @@ main li{
     .nav{
         display: flex;
         flex-direction: column;
-        align-items: center;
-    }
-    .navtitle{
-        margin-left: -9rem;
+        align-items: stretch;
     }
     .list{
         display: none;
