--- a/index.css
+++ b/index.css
@@ -182,10 +182,7 @@ a{
     .nav{
         display: flex;
         flex-direction: column;
-        align-items: center;
-    }
-    .navtitle{
-        margin-left: -9rem;
+        align-items: stretch;
     }
     .list{
         display: none;
