added scrolling horizontal text

--- a/index.css
+++ b/index.css
@@ -20,6 +20,7 @@ body{
     color: var(--text-color);
     background-color: var(--bg-color-reg);
     font-family: var(--font-regular);
+    overflow-x: hidden;
 }
 .img{
     width: 100%;
@@ -42,6 +43,7 @@ body{
     font-family: var(--font-strong);
     text-transform: uppercase;
     padding: 1rem;
+    z-index: 5;
 }
 .navtitle{
     font-family: var(--font-regular);
@@ -141,6 +143,27 @@ a{
     display: flex;
     gap: 0.7rem;
 }
+.animation{
+    position: relative;
+    grid-row-start: 2;
+    grid-column-start:1;
+    grid-column-end:3 ;
+    font-size: x-large;
+    max-width: 200%;
+    color: var(--color-sub);
+    animation: textflow 5s linear infinite ;
+}
+@keyframes textflow {
+    from {
+        margin-left: 100%;
+        width: 400%; 
+      }
+    
+      to {
+        margin-left: -50%;
+        width: 400%;
+      }
+  }
 .footer{
     display: grid;
     grid-template-columns: 4fr 1fr 1fr;
@@ -206,10 +229,30 @@ a{
         
     }
     .child4{
-        grid-row-start: 3;
+        grid-row-start: 4;
     }
     .child6{
-        grid-row-start: 7;
+        grid-row-start: 8;
     }
-    
+    .animation{
+        position: relative;
+        grid-row-start: 2;
+        grid-column-start:1;
+        grid-column-end:1 ;
+        font-size: x-large;
+        color: var(--color-sub);
+        animation: textflow 5s linear infinite ;
+        max-width: 150%;
+    }
+    @keyframes textflow {
+        from {
+            margin-left: 100%;
+            width: 150%; 
+          }
+        
+          to {
+            margin-left: -100%;
+            width: 200%;
+          }
+      }
 }
