--- a/menu.css
+++ b/menu.css
@@ -237,7 +237,7 @@ main{
     .nav{
         display: flex;
         flex-direction: column;
-        align-items: stretch;
+        align-items: center;
     }
     .list{
         display: none;
